# shuttle-cch23

./: .gitignore  Cargo.toml  README.md
migrations/: 20241021103749_init.up.sql  20241024040305_region.down.sql  20241024040305_region.up.sql
src/: db.rs  main.rs
src/challenge/: day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day_1.rs  mod.rs
