[package]
name = "shuttle-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["json", "macros", "multipart", "ws"] }
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = { version = "1.28.2", features = ["full", "sync"] }
serde = "*"
serde_json = "*"
base64 = "0.22.1"
reqwest = "0.12.8"
anyhow = "1.0.90"
tower-http = { version = "0.6.1", features = ["fs"] }
axum-extra = "0.9.4"
image = "0.25.4"
ulid = { version = "1.1.3", features = ["uuid"] }
uuid = "1.11.0"
chrono = "0.4.38"
sqlx = { version = "0.8.2", features = ["macros", "postgres", "runtime-tokio", "tls-native-tls"] }
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
askama = "0.12.1"
thiserror = "1.0.65"
itertools = "0.13.0"
regex = "1.11.0"
emojis = "0.6.4"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
futures-util = "0.3.31"
tar = "0.4.42"
git2 = "0.19.0"
s2 = "0.0.13"

